 ===V.023beta===
 * Attempt to fix ffmpeg crashes in av_close_input_file (function frees structure, but JNA attempts to read it back after call completes)
 * Change method of parsing title for pyTivo & tivo XML files
 * Fixed bug causing crashes if dir.x did not exit (in cache cleanup code)
 * Optimized & fixed bugs in mp4 metadata reading
 
 ===V0.22beta===
 * Changed default for quality.2channel to zero, effectively disabling it.  Newer ffmpeg doesn't like to do this for 5.1 aac -> 2 channel ac3
 * Added support for new ffmpeg, AVStream->sample_aspect_ratio 
 * Added 3gp, mov to supported extension
 * Undid previous mp4 changes to skip reinterleave under certain circumstances.
 * Added metadata parsing.  Metadata is displayed on "Play" screen and when pressing the info button while playing
   * Metadata is looked for in the form "filename.mpg.xxx" where xxx the metadata extension.
   * Metadata is looked for in the same directory of the video file, or in a subdirectory of the directory where the main file is called .meta
   * Metadata supported:
   * .txt files-  Either a pyTivo metadata file or a standard txt file (autodetected)
   * .html
   * .xml
   * .gif, .png, .jpg:  Use as straight images.  New config property info.preserveaspect=true to control if img is allowed to be stretched
   * Metadata is transformed using XSL into either straight txt or html (either is OK)
   * new INI options: xsl.pytivo= and xsl.txt=
    * Points to the xslt file to use to transform the respective formats.  Can be chained (so xsl.pytivo=pytivo.xsl,pretty.xsl would apply both xsl stylesheets)
    * For pytivo the xml fed in is each "key" (value before the colon) is an element, and the text for that key is the text for the element (as cdata).
     * Whole file is wrapped in <pytivo>  </pytivo>
    * For txt the xml is the whole text file wrapped in <txt> </txt> (as cdata) 