@@ -2,11 +2,10 @@ package com.unwiredappeal.tivo.metadata;
 
 import java.net.URI;
 
-import com.unwiredappeal.mediastreams.VideoInformation;
 import com.unwiredappeal.tivo.modules.StreamBabyModule;
 
 public interface MetadataModule {
 	boolean initialize(StreamBabyModule parent);
-	boolean setMetadata(MetaData m, URI uri, VideoInformation vi);
+	boolean setMetadata(MetaData m, URI uri);
 	public int getMetadataPriority();
 }
