@@ -1,3 +1,8 @@
+ ===SVN===
+  * Added stack trace printout to Listener when catching uncaught exceptions
+  * disabled using ffmpeg to gather metadata.
+   * new config: meta.vidinfo.disable=true  set to false to re-enable ffmpeg gathering of metadata
+ 
  ===V.023beta===
  * Attempt to fix ffmpeg crashes in av_close_input_file (function frees structure, but JNA attempts to read it back after call completes)
  * Change method of parsing title for pyTivo & tivo XML files
